onesky/dss-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: onesky-http-gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dss-ohio.oneskysystems.com
      secretName: dss-tls
  rules:
    - host: dss-ohio.oneskysystems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: "http-gateway"
              servicePort: 8080
