onesky/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: onesky-grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - grafana.dss-ohio.oneskysystems.com
      secretName: dss-tls
  rules:
    - host: grafana.dss-ohio.oneskysystems.com
      http:
        paths:
          - path: /dss(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: "grafana"
              servicePort: 3000
